changes to the authentication module