@@ -20,14 +20,17 @@ public class DeviceIdValidator {
     }
 
     public boolean validateDeviceId(ContainerRequestContext requestContext, String key, User user){
-        String userDeviceId = getUserDeviceId(user);
         List<String> headerDeviceId = getHeaderKey(requestContext, key);
 
-        if (headerDeviceId == null || userDeviceId == null) {
-            throw new ObjectNotFoundException(String.format("the user device id cannot be null and the header device id cannot be null %s", headerDeviceId));
+        if (headerDeviceId == null) {
+            throw new ObjectNotFoundException("the header device id cannot be null");
+        }
+        String userDeviceId = getUserDeviceId(user);
+        if ( userDeviceId == null) {
+            throw new ObjectNotFoundException("the userDeviceId cannot be null");
         }
 
-        if (!Objects.equals(userDeviceId, headerDeviceId.get(0))){
+        if (!Objects.equals(userDeviceId, headerDeviceId.getFirst())){
             throw new ObjectNotFoundException(String.format("the user device id and the header device id %s must be equal", headerDeviceId));
         }
         return true;
